Allow disable source mac verification on the endpoint
1. bump cloud-provider-gcp version
2. new configuration to allow the disablement
3. the pod can be annotated to disable the souce mac verification

Carry-Patch-Approval: b/307599254

BUG: 288469992
Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/860002
Tested-by: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
Unit-Verified: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
