# api/v1/openapi.yaml
@@ -1320,6 +1320,10 @@ definitions:
         description: >
           Enables multicast traffic for Endpoint.
         type: boolean
+      disable-smac-verification:
+        description: >
+          Disable source MAC verification for the endpoint.
+        type: boolean
   EndpointStatus:
     description: The current state and configuration of the endpoint, its policy & datapath, and subcomponents
     type: object
