# pkg/testutils/endpoint.go
@@ -61,6 +61,7 @@ func (e *TestEndpoint) RequireEgressProg() bool                     { return fal
 func (e *TestEndpoint) RequireRouting() bool                        { return false }
 func (e *TestEndpoint) RequireEndpointRoute() bool                  { return false }
 func (e *TestEndpoint) DisableSIPVerification() bool                { return false }
+func (e *TestEndpoint) DisableSMACVerification() bool               { return false }
 func (e *TestEndpoint) GetPolicyVerdictLogFilter() uint32           { return 0xffff }
 func (e *TestEndpoint) GetCIDRPrefixLengths() ([]int, []int)        { return nil, nil }
 func (e *TestEndpoint) GetID() uint64                               { return e.Id }
